# gxde-kernel-manager

./: .gitignore  CMakeLists.txt  README.md  Resource.qrc  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  add-lib-to-kernel-manager.sh  aptpkginfo.cpp  aptpkginfo.h  build_action-aarch64.sh  build_action-loong64-4k-pagesize.sh  build_action-mips64el.sh  build_action-riscv64.sh  build_action.sh  build_action_xanmod.sh  config  config-4.19.0-10-amd64  config-4.19.0-10-arm64  config-4.19.0-10-riscv64  config-6.1.11-amd64-desktop-hwe  config-aarch64  config-arm64  config-loong64-4k-pagesize  config-mips64el  config-xanmod  get-newest-version-xanmod.py  get-newest-version.py  gxde-kernel-manager-runner.sh  gxde-kernel-manager.desktop  gxde-kernel-manager.pro  kernel-installer-template.sh  kernelinformation.cpp  kernelinformation.h  kernelinformationdialog.cpp  kernelinformationdialog.h  kernelinformationdialog.ui  kernelinstaller.cpp  kernelinstaller.h  kernelinstaller.ui  (+6 more)
.github/workflows/: arm-test.yml  build-0-aarch64.yml  build-0-test.yml  build-0.yml  build-1-test.yml  build-1.yml  build-2.yml  build-3.yml  build-4.yml  build-5.yml  build-6.yml  build-7.yml  build-8.yml  build-hwe-0.yml  build-hwe-1.yml  build-hwe-2.yml  build-hwe-3.yml  build-hwe-4.yml  build-hwe-5.yml  build-hwe-6.yml  build-hwe-7.yml  build-xanmod-0.yml  build-xanmod-1.yml  build-xanmod-2.yml  build-xanmod-3.yml  build-xanmod-hwe0.yml  build-xanmod-hwe1.yml  build-xanmod-hwe2.yml  build-xanmod-hwe3.yml  build.yml
AptSources/: gxde-kernel-manager.list
data/new/: en_US.html  zh_CN.html
dclc-kernel/head/: linux-kernel-gxde-gfdgdxi-0_6.10-rc5_amd64.deb  linux-kernel-gxde-gfdgdxi_6.10-rc5_amd64.deb
dclc-kernel/head/deb-6/DEBIAN/: control
dclc-kernel/head/deb/DEBIAN/: control
debian/: changelog  control  copyright  postinst
lib/amd64/: libqtermwidget5.so.0.14.1
lib/arm64/: libqtermwidget5.so.0
shell/: kernel-installer-reconfigure-template.sh  kernel-installer-remove-template.sh  kernel-installer-root-loader-template.sh  kernel-installer-template.sh  kernel-installer-update-template.sh  kernel-installer-upgrade-template.sh
translation/: gxde-kernel-manager_zh_CN.ts
translations/: gxde-kernel-manager_zh_CN.ts
